--- a/src/common/containers/history/detail-container/detail-container.component.html
+++ b/src/common/containers/history/detail-container/detail-container.component.html
@@ -16,6 +16,17 @@
 </ng-container>
 <ng-template #dataTemplate>
     <div *ngIf="supplyPoint$ | async as supplyPoint" class="row">
+        <div class="col-12 col-xl-10 offset-xl-1">
+            <lnd-banner-ui
+                buttonLabel="Najít dodavatele"
+                [data]="{
+                            text: 'Obnovit smlouvu'
+                        }"
+                (customBannerAction)="restoreContractAction($event,supplyPoint, router)"
+            >
+                Obnovit smlouvu
+            </lnd-banner-ui>
+        </div>
         <div class="col-12 mb-5 text-center text-md-left mb-md-3 col-xl-10 offset-xl-1">
             <lnd-button
                 label="Krok zpět"
