--- a/src/common/ui/carousels/carousel-references/carousel-references.component.scss
+++ b/src/common/ui/carousels/carousel-references/carousel-references.component.scss
@@ -80,7 +80,7 @@
 				justify-content: center;
 				width: auto;
 				height: auto;
-				padding: ( $spacer / 2 );
+				padding: ( $spacer * 0.5 );
 				border: none;
 				opacity: .2;
 
