--- a/src/assets/scss/01_base/_utilities.scss
+++ b/src/assets/scss/01_base/_utilities.scss
@@ -3,6 +3,8 @@
  */
 
 // Set text size to 12px, (1rem = 16px)
+@use "sass:math";
+
 .font-size-12 {
 	font-size: .75rem;
 }
@@ -92,7 +94,7 @@
 	}
 
 	&__text {
-		margin-left: ( $spacer / 2 );
+		margin-left: ( $spacer * 0.5 );
 	}
 
 	&--link {
@@ -116,7 +118,7 @@
 	&--icon-right {
 		.text-with-icon__text {
 			margin-left: 0;
-			margin-right: ( $spacer / 2 );
+			margin-right: ( $spacer * 0.5 );
 		}
 	}
 }
@@ -127,7 +129,7 @@
 	align-items: center;
 
 	& &__icon {
-		margin-right: ( $spacer / 2 );
+		margin-right: ( $spacer * 0.5 );
 		color: $icons-green;
 		font-size: 1rem;
 		font-weight: 700;
@@ -301,7 +303,7 @@ $colors: (
 
 	@while $i <= $n {
 		.#{$class}--#{$i} {
-			#{$dimension}: ($i * 100% / $n);
+			#{$dimension}: math.div($i * 100%, $n);
 		}
 
 		$i: $i + 1;
