--- a/src/assets/scss/02_layout/_body.scss
+++ b/src/assets/scss/02_layout/_body.scss
@@ -5,6 +5,8 @@
  */
 
 
+@use "sass:math";
+
 .container-fluid {
 	&--max-width {
 		padding-left: ( $spacer * 2 );
@@ -76,8 +78,8 @@
 	justify-content: center;
 	align-items: flex-end;
 	height: calc(100% - 30px);
-	margin: 0 ( -$spacer / 2 );
-	padding: 0 ( $spacer / 2 );
+	margin: 0 ( -$spacer * 0.5 );
+	padding: 0 ( $spacer * 0.5 );
 	background-color: $white;
 
 	// Media queries
@@ -99,7 +101,7 @@
 		// Media queries
 		@include media-breakpoint-up(md) {
 			position: absolute;
-			top: -( $spacer / 3 );
+			top: -( math.div($spacer, 3) );
 		}
 	}
 }
