--- a/src/assets/scss/02_layout/_main.scss
+++ b/src/assets/scss/02_layout/_main.scss
@@ -5,6 +5,8 @@
  */
 
 
+@use "sass:math";
+
 .main {
 	position: relative;
 
@@ -16,13 +18,13 @@
 		> li {
 			position: relative;
 			padding-left: $spacer;
-			padding-bottom: ( $lists-margin-bottom / 2 );
+			padding-bottom: ( $lists-margin-bottom * 0.5 );
 		}
 
 		ol,
 		ul {
 			margin-bottom: 0;
-			margin-top: ( $lists-margin-bottom / 2 );
+			margin-top: ( $lists-margin-bottom * 0.5 );
 		}
 	}
 
@@ -31,8 +33,8 @@
 			&::before {
 				content: '';
 				position: absolute;
-				top: ( $list-bullet-size / 2 );
-				left: ( $list-bullet-size / 2 );
+				top: ( $list-bullet-size * 0.5 );
+				left: ( $list-bullet-size * 0.5 );
 				width: $list-bullet-size;
 				height: $list-bullet-size;
 				border-radius: $list-bullet-size;
@@ -58,7 +60,7 @@
 			content: counter(ol-list-1, decimal) '.';
 			position: absolute;
 			top: 0;
-			left: ( $list-bullet-size / 2 );
+			left: ( $list-bullet-size * 0.5 );
 			color: $font-text;
 			font-weight: 700;
 		}
@@ -73,7 +75,7 @@
 
 			> li::before {
 				content: counter(ol-list-2, lower-latin) ')';
-				padding-right: ( $spacer / 4 );
+				padding-right: ( $spacer * 0.25 );
 			}
 
 			ol {
@@ -112,7 +114,7 @@
 			padding-top: ( $circular-number-list-size + ( $spacer * .25 ) );
 			padding-left: 0;
 			padding-bottom: ( $spacer * 2 );
-			line-height: ( 24 / 16 );
+			line-height:  math.div(24, 16) ;
 
 			// Media queries
 			@include media-breakpoint-up(md) {
@@ -162,7 +164,7 @@
 
 			&::before {
 				font-size: $h2-font-size;
-				line-height: ( 24 / 18 );
+				line-height:  math.div(24, 18) ;
 				padding-left: $list-decimal-padding-left;
 			}
 
@@ -194,7 +196,7 @@
 			> li::before {
 				padding-left: 0;
 				font-size: $h3-font-size-public-xs;
-				line-height: ( 30 / 24 );
+				line-height:  math.div(30, 24) ;
 				font-weight: 700;
 
 				// Media queries
@@ -242,9 +244,9 @@
 
 	.check-list {
 		li {
-			padding-left: ( $icon-size-small-px + ( $spacer / 2 ) );
+			padding-left: ( $icon-size-small-px + ( $spacer * 0.5 ) );
 			padding-bottom: ( $spacer * 1.5 );
-			line-height: ( 18 / 14 );
+			line-height:  math.div(18, 14) ;
 
 			&::before {
 				content: '\e906';
@@ -324,12 +326,12 @@
 		}
 
 		&--small {
-			margin: 0 ( -$spacer / 2 );
+			margin: 0 ( -$spacer * 0.5 );
 
 			.link-list__item {
 				// Media queries
 				@include media-breakpoint-up(md) {
-					padding: 0 ( $spacer / 2 );
+					padding: 0 ( $spacer * 0.5 );
 				}
 			}
 
@@ -368,14 +370,14 @@
 
 		.link-list__link {
 			@include link-without-href {
-				padding-bottom: ( $spacer / 4 );
+				padding-bottom: ( $spacer * 0.25 );
 				font-size: $font-size-base-public;
 				text-transform: none;
 
 				// Media queries
 				@include media-breakpoint-up(md) {
-					padding-left: ( $spacer / 2 );
-					padding-right: ( $spacer / 2 );
+					padding-left: ( $spacer * 0.5 );
+					padding-right: ( $spacer * 0.5 );
 				}
 				@include media-breakpoint-up(xl) {
 					padding-left: ( $spacer * 2 );
