--- a/src/assets/scss/05_pages/error-page.scss
+++ b/src/assets/scss/05_pages/error-page.scss
@@ -17,7 +17,7 @@
 	}
 
 	&__title {
-		margin-bottom: ( $spacer / 4 );
+		margin-bottom: ( $spacer * 0.25 );
 		font-size: 1.5rem;
 	}
 
@@ -34,7 +34,7 @@
 				content: counter(error-next-steps-counter) '.';
 				position: relative;
 				left: 0;
-				margin-right: ( $spacer / 2 );
+				margin-right: ( $spacer * 0.5 );
 				font-weight: 400;
 			}
 		}
@@ -79,7 +79,7 @@
 	}
 
 	p {
-		margin: 0 0 ( $spacer / 4 );
+		margin: 0 0 ( $spacer * 0.25 );
 	}
 
 	.footer {
