--- a/src/assets/scss/05_pages/public-pages.scss
+++ b/src/assets/scss/05_pages/public-pages.scss
@@ -204,7 +204,7 @@
 
 		// Media queries
 		@include media-breakpoint-up(md) {
-			padding-bottom: ( $spacer / 2 );
+			padding-bottom: ( $spacer * 0.5 );
 		}
 		@include media-breakpoint-up(xl) {
 			padding-bottom: 0;
