--- a/src/common/ui/add/add.component.scss
+++ b/src/common/ui/add/add.component.scss
@@ -5,6 +5,8 @@
  */
 
 // Core component import
+@use "sass:math";
+
 @import 'src/assets/scss/01_base/base.scss';
 
 .add {
@@ -32,7 +34,7 @@
 	}
 
 	&__holder {
-		padding: ( $spacer / 2 );
+		padding: ( $spacer * 0.5 );
 	}
 
 	&__icon,
@@ -41,7 +43,7 @@
 	}
 
 	&__icon {
-		margin-bottom: ( $spacer / 6 );
+		margin-bottom:  math.div($spacer, 6) ;
 	}
 
 	&__text {
@@ -50,14 +52,14 @@
 }
 
 .add-table-holder {
-	padding: ( $spacer / 1.5 ) 0;
+	padding:  math.div($spacer, 1.5)  0;
 	margin-bottom: $spacer;
 	border-top: 1px solid $table-border-color;
 	border-bottom: 1px solid $table-border-color;
 }
 
 .add-table {
-	margin-left: ( $spacer / 2 );
+	margin-left: ( $spacer * 0.5 );
 
 	@include link-without-href {
 		color: $primary;
@@ -77,7 +79,7 @@
 	}
 
 	&__icon-holder {
-		margin-right: ( $spacer / 2 );
+		margin-right: ( $spacer * 0.5 );
 		border: 1px solid $link-color;
 		border-radius: 100%;
 	}
