--- a/src/common/ui/alert/alert.component.scss
+++ b/src/common/ui/alert/alert.component.scss
@@ -11,8 +11,8 @@
 @import 'alert.component.variables.scss';
 
 // Bootstrap alert and close import
-@import '~bootstrap/scss/alert';
-@import '~bootstrap/scss/close';
+@import '~bootstrap/scss/alert.scss';
+@import '~bootstrap/scss/close.scss';
 
 .alert {
 	color: $white;
@@ -25,7 +25,7 @@
 	}
 
 	&__common-icon {
-		padding-right: ( $spacer / 2 );
+		padding-right: ( $spacer * .5 );
 		font-size: $font-size-base;
 	}
 }
