--- a/src/common/ui/button/_button.component.variables.scss
+++ b/src/common/ui/button/_button.component.variables.scss
@@ -5,6 +5,8 @@
  */
 
 
+@use "sass:math";
+
 $btn-font-weight:                  400;
 $btn-focus-box-shadow-size:        0 0 8px 0;
 $btn-focus-box-shadow-color:       rgba($primary, .8);
@@ -18,14 +20,14 @@ $btn-width-icon-alone:             30px;
 $btn-height:                       40px;
 $btn-height-small:                 30px;
 $btn-height-large:                 68px;
-$btn-padding-y:                    ( $spacer / 2 );
+$btn-padding-y:                    ( $spacer * 0.5 );
 $btn-padding-x:                    $spacer;
 $btn-line-height:                  $line-height-sm;
 $btn-border-radius:                4px;
-$btn-padding-y-sm:                 ( $spacer / 6 );
-$btn-padding-x-sm:                 ( $spacer / 3 );
+$btn-padding-y-sm:                  math.div($spacer, 6) ;
+$btn-padding-x-sm:                  math.div($spacer, 3) ;
 $font-size-sm:                     .688rem;
-$btn-line-height-sm:               ( 18 / 11 );
+$btn-line-height-sm:                math.div(18, 11) ;
 $btn-font-family:                  'roboto', arial;
 $btn-border-width:                 2px;
 $btn-border-radius-sm:             $btn-border-radius;
