--- a/src/common/ui/card/card.component.scss
+++ b/src/common/ui/card/card.component.scss
@@ -5,6 +5,8 @@
  */
 
 // Core component import
+@use "sass:math";
+
 @import 'src/assets/scss/01_base/base.scss';
 
 // Component variables
@@ -40,7 +42,7 @@
 
 		// Media queries
 		@include media-breakpoint-up(md) {
-			padding: 0 ( $card-tile-item-spacer / 5 );
+			padding: 0 ( $card-tile-item-spacer * 0.2 );
 		}
 		@include media-breakpoint-up(xl) {
 			padding: $card-tile-item-spacer;
@@ -52,7 +54,7 @@
 		&:nth-child(-n + 3) {
 			// Media queries
 			@include media-breakpoint-up(xl) {
-				padding-top: ( $card-tile-item-spacer / 6 );
+				padding-top:  math.div($card-tile-item-spacer, 6) ;
 			}
 		}
 
@@ -64,7 +66,7 @@
 		}
 
 		&--last-item {
-			padding-bottom: ( $spacer / 2 );
+			padding-bottom: ( $spacer * 0.5 );
 			border-bottom: none;
 		}
 
