--- a/src/common/ui/dropdown/dropdown.component.scss
+++ b/src/common/ui/dropdown/dropdown.component.scss
@@ -37,7 +37,7 @@
 			content: '';
 			position: absolute;
 			left: 50%;
-			margin-left: -( $dropdown-beak-border-width / 2 );
+			margin-left: -( $dropdown-beak-border-width * 0.5 );
 			width: 0;
 			height: 0;
 			border-bottom: $dropdown-beak-border-width $dropdown-beak-border-style $dropdown-beak-border-color;
@@ -170,7 +170,7 @@
 		position: absolute;
 		top: 50%;
 		left: $spacer;
-		margin-top: -( $icon-size-px / 2 );
+		margin-top: -( $icon-size-px * 0.5 );
 		color: $secondary;
 	}
 }
