--- a/src/common/ui/file-uploader/file-uploader.component.scss
+++ b/src/common/ui/file-uploader/file-uploader.component.scss
@@ -27,16 +27,16 @@
 		bottom: 0;
 		background:
 			linear-gradient(90deg, $drop-zone-border-color 100%, transparent 100%) top left no-repeat,
-			linear-gradient(90deg, transparent ($drop-zone-border-gap-width / 2), $drop-zone-border-color ($drop-zone-border-gap-width / 2), $drop-zone-border-color ($drop-zone-border-gap-width / 2 + $drop-zone-border-dash-width), transparent ($drop-zone-border-gap-width / 2 + $drop-zone-border-dash-width)) top center repeat-x,
+			linear-gradient(90deg, transparent ($drop-zone-border-gap-width * 0.5), $drop-zone-border-color ($drop-zone-border-gap-width * 0.5), $drop-zone-border-color ($drop-zone-border-gap-width * 0.5 + $drop-zone-border-dash-width), transparent ($drop-zone-border-gap-width * 0.5 + $drop-zone-border-dash-width)) top center repeat-x,
 			linear-gradient(90deg, $drop-zone-border-color 100%, transparent 100%) top right no-repeat,
 			linear-gradient(0deg, $drop-zone-border-color 100%, transparent 100%) top left no-repeat,
-			linear-gradient(0deg, transparent ($drop-zone-border-gap-width / 2), $drop-zone-border-color ($drop-zone-border-gap-width / 2), $drop-zone-border-color ($drop-zone-border-gap-width / 2 + $drop-zone-border-dash-width), transparent ($drop-zone-border-gap-width / 2 + $drop-zone-border-dash-width)) center left repeat-y,
+			linear-gradient(0deg, transparent ($drop-zone-border-gap-width * 0.5), $drop-zone-border-color ($drop-zone-border-gap-width * 0.5), $drop-zone-border-color ($drop-zone-border-gap-width * 0.5 + $drop-zone-border-dash-width), transparent ($drop-zone-border-gap-width * 0.5 + $drop-zone-border-dash-width)) center left repeat-y,
 			linear-gradient(0deg, $drop-zone-border-color 100%, transparent 100%) bottom left no-repeat,
 			linear-gradient(90deg, $drop-zone-border-color 100%, transparent 100%) bottom left no-repeat,
-			linear-gradient(90deg, transparent ($drop-zone-border-gap-width / 2), $drop-zone-border-color ($drop-zone-border-gap-width / 2), $drop-zone-border-color ($drop-zone-border-gap-width / 2 + $drop-zone-border-dash-width), transparent ($drop-zone-border-gap-width / 2 + $drop-zone-border-dash-width)) bottom center repeat-x,
+			linear-gradient(90deg, transparent ($drop-zone-border-gap-width * 0.5), $drop-zone-border-color ($drop-zone-border-gap-width * 0.5), $drop-zone-border-color ($drop-zone-border-gap-width * 0.5 + $drop-zone-border-dash-width), transparent ($drop-zone-border-gap-width * 0.5 + $drop-zone-border-dash-width)) bottom center repeat-x,
 			linear-gradient(90deg, $drop-zone-border-color 100%, transparent 100%) bottom right no-repeat,
 			linear-gradient(0deg, $drop-zone-border-color 100%, transparent 100%) top right no-repeat,
-			linear-gradient(0deg, transparent ($drop-zone-border-gap-width / 2), $drop-zone-border-color ($drop-zone-border-gap-width / 2), $drop-zone-border-color ($drop-zone-border-gap-width / 2 + $drop-zone-border-dash-width), transparent ($drop-zone-border-gap-width / 2 + $drop-zone-border-dash-width)) center right repeat-y,
+			linear-gradient(0deg, transparent ($drop-zone-border-gap-width * 0.5), $drop-zone-border-color ($drop-zone-border-gap-width * 0.5), $drop-zone-border-color ($drop-zone-border-gap-width * 0.5 + $drop-zone-border-dash-width), transparent ($drop-zone-border-gap-width * 0.5 + $drop-zone-border-dash-width)) center right repeat-y,
 			linear-gradient(0deg, $drop-zone-border-color 100%, transparent 100%) bottom right no-repeat;
 		background-size: $drop-zone-border-dash-width $drop-zone-border-size, ($drop-zone-border-dash-width + $drop-zone-border-gap-width) $drop-zone-border-size, $drop-zone-border-dash-width $drop-zone-border-size, $drop-zone-border-size $drop-zone-border-dash-width, $drop-zone-border-size ($drop-zone-border-dash-width + $drop-zone-border-gap-width), $drop-zone-border-size $drop-zone-border-dash-width;
 		z-index: $zindex-drop-zone-bg-image;
