--- a/src/common/ui/forms/field/field.component.scss
+++ b/src/common/ui/forms/field/field.component.scss
@@ -24,7 +24,7 @@
 .form-control-info {
 	position: relative;
 	display: inline-block;
-	padding: ( $spacer / 2 ) $spacer;
+	padding: ( $spacer * 0.5 ) $spacer;
 	background-color: $secondary;
 	color: $white;
 	border-radius: 3px 3px 3px 0;
@@ -123,7 +123,7 @@
 		}
 
 		.custom-control-label {
-			padding-right: ( $icon-size-px + ( $spacer / 2 ) );
+			padding-right: ( $icon-size-px + ( $spacer * 0.5 ) );
 			z-index: $zindex-custom-control;
 		}
 	}
@@ -247,7 +247,7 @@ textarea.form-control--not-empty {
 	position: relative;
 	display: block;
 	top: 0;
-	margin-bottom: ( $spacer / 2 );
+	margin-bottom: ( $spacer * 0.5 );
 }
 
 // States
@@ -327,7 +327,7 @@ textarea.form-control--not-empty {
 
 	& ~ .invalid-feedback {
 		display: none;
-		margin-top: ( $spacer / 4 );
+		margin-top: ( $spacer * 0.25 );
 		font-size: $small-font-size;
 		max-width: $input-width;
 	}
@@ -593,7 +593,7 @@ textarea.form-control--not-empty {
 }
 
 .custom-control-label {
-	padding-left: ( $custom-control-indicator-size-px + ( $spacer / 2 ) );
+	padding-left: ( $custom-control-indicator-size-px + ( $spacer * 0.5 ) );
 	color: $input-color;
 	font-size: $input-font-size;
 	cursor: pointer;
@@ -890,7 +890,7 @@ th {
 		&:nth-of-type(1) {
 			.custom-control-input {
 				& + .custom-control-label {
-					padding-right: ( $spacer * 6 ) + ( $custom-switch-width / 2 );
+					padding-right: ( $spacer * 6 ) + ( $custom-switch-width * 0.5 );
 				}
 			}
 		}
@@ -900,7 +900,7 @@ th {
 			margin-left: -$spacer * 7;
 
 			.custom-control-input + .custom-control-label {
-				padding-left: ( $spacer * 6 ) + ( $custom-switch-width / 2 );
+				padding-left: ( $spacer * 6 ) + ( $custom-switch-width * 0.5 );
 
 				&::before {
 					display: block;
@@ -960,9 +960,9 @@ th {
 
 	.select-icon {
 		position: absolute;
-		top: ( $input-height / 2 );
+		top: ( $input-height * 0.5 );
 		right: 0;
-		padding-right: ( $spacer / 2 );
+		padding-right: ( $spacer * 0.5 );
 		font-weight: $font-weight-bold;
 		pointer-events: none;
 	}
@@ -999,7 +999,7 @@ th {
 // File input
 .custom-file {
 	width: auto;
-	margin-bottom: ( $spacer / 2 );
+	margin-bottom: ( $spacer * 0.5 );
 }
 
 .custom-file-input {
@@ -1043,7 +1043,7 @@ th {
 }
 
 .input-subtext {
-	margin-top: ( $spacer / 4 );
+	margin-top: ( $spacer * 0.25 );
 	font-size: $small-font-size;
 	text-align: justify;
 
