--- a/src/common/ui/modal/modal.component.scss
+++ b/src/common/ui/modal/modal.component.scss
@@ -5,6 +5,8 @@
  */
 
 // Core component import
+@use "sass:math";
+
 @import 'src/assets/scss/01_base/base.scss';
 
 // Component variables
@@ -64,7 +66,7 @@
 	}
 
 	> :not(:last-child) {
-		margin-bottom: ( $spacer / 2 );
+		margin-bottom: ( $spacer * 0.5 );
 		margin-right: 0;
 
 		// Media queries
@@ -75,7 +77,7 @@
 	}
 
 	> :not(:first-child) {
-		margin-top: ( $spacer / 2 );
+		margin-top: ( $spacer * 0.5 );
 		margin-left: 0;
 
 		// Media queries
@@ -148,7 +150,7 @@
 		margin-bottom: $spacer;
 
 		> :not(:last-child) {
-			margin-bottom: ( $spacer / 2 );
+			margin-bottom: ( $spacer * 0.5 );
 			margin-right: 0;
 		}
 
