--- a/src/common/ui/navigation/navigation.component.scss
+++ b/src/common/ui/navigation/navigation.component.scss
@@ -5,6 +5,8 @@
  */
 
 // Core component import
+@use "sass:math";
+
 @import 'src/assets/scss/01_base/base.scss';
 
 // Component variables
@@ -15,7 +17,7 @@
 	display: none;
 	position: absolute;
 	z-index: 2010;
-	top: ( ( $header-height / 2 ) + ( $menu-toggle-line-width-rotate - ( $logo-height-mobile / 2 ) ) + ( $spacer * .75 ) );
+	top: ( ( $header-height * 0.5 ) + ( $menu-toggle-line-width-rotate - ( $logo-height-mobile * 0.5 ) ) + ( $spacer * .75 ) );
 	right: $aside-right-offset-mobile;
 	width: $aside-width-mobile;
 	overflow-x: hidden;
@@ -28,7 +30,7 @@
 
 	// Media queries
 	@include media-breakpoint-up(md) {
-		top: ( ( $header-height / 2 ) + ( $menu-toggle-line-width-rotate - ( $logo-height-tablet / 2 ) ) + ( $spacer * .75 ) );
+		top: ( ( $header-height * 0.5 ) + ( $menu-toggle-line-width-rotate - ( $logo-height-tablet * 0.5 ) ) + ( $spacer * .75 ) );
 	}
 	@include media-breakpoint-down(lg) {
 		max-height: calc( 100vh - ( ( ( #{$header-height} / 2 ) + ( #{$menu-toggle-line-width-rotate} - ( #{$logo-height-mobile} / 2 ) ) + ( #{$spacer} * .75 ) ) + #{$aside-right-offset-mobile} ) );
@@ -67,8 +69,8 @@
 
 	// Media queries
 	@include media-breakpoint-up(lg) {
-		padding-top: ( $spacer / 1.5 );
-		padding-bottom: ( $spacer / 1.5 );
+		padding-top:  math.div($spacer, 1.5) ;
+		padding-bottom:  math.div($spacer, 1.5) ;
 	}
 
 	&:nth-child(n + 2) {
@@ -118,8 +120,8 @@
 	font-size: $icon-size-small;
 	position: absolute;
 	top: 50%;
-	margin-top: -( $icon-size-small / 2 );
-	right: ( $spacer / 2 );
+	margin-top: -( $icon-size-small * 0.5 );
+	right: ( $spacer * 0.5 );
 }
 
 .navigation-main__link {
@@ -200,7 +202,7 @@
 	}
 
 	& + .badge {
-		margin-left: ( $spacer / 3 );
+		margin-left:  math.div($spacer, 3) ;
 	}
 }
 
@@ -208,7 +210,7 @@
 	position: absolute;
 	top: 50%;
 	left: $spacer;
-	margin-top: -( $icon-size-px / 2 );
+	margin-top: -( $icon-size-px * 0.5 );
 	color: $secondary;
 
 	// Media queries
