--- a/src/common/ui/placeloader/placeloader.component.scss
+++ b/src/common/ui/placeloader/placeloader.component.scss
@@ -5,6 +5,8 @@
  */
 
 // Core component import
+@use "sass:math";
+
 @import 'src/assets/scss/01_base/base.scss';
 
 
@@ -25,7 +27,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		padding: $spacer ( $spacer / 2 );
+		padding: $spacer ( $spacer * 0.5 );
 		z-index: $zindex-placeloader-holder;
 		background-color: $white;
 		background: linear-gradient(90deg, rgba($white, 0) 0%, rgba($white, 1) 50%, rgba($white, 0) 100%);
@@ -39,7 +41,7 @@
 
 	&__symbol {
 		position: relative;
-		width: ( 3 * $placeloader-circle-size ) + ( ( $spacer / 3 ) * 2 );
+		width: ( 3 * $placeloader-circle-size ) + (  math.div($spacer, 3)  * 2 );
 		height: $placeloader-circle-size;
 	}
 
@@ -60,19 +62,19 @@
 		}
 
 		&:nth-child(2) {
-			left: $placeloader-circle-size + ( $spacer / 3 );
+			left: $placeloader-circle-size +  math.div($spacer, 3) ;
 			animation-delay: .3s;
 		}
 
 		&:nth-child(3) {
-			left: $placeloader-circle-size + ( $spacer / 3 ) + $placeloader-circle-size + ( $spacer / 3 );
+			left: $placeloader-circle-size +  math.div($spacer, 3)  + $placeloader-circle-size +  math.div($spacer, 3) ;
 			animation-delay: .6s;
 		}
 	}
 
 	&__text {
 		max-width: 90%;
-		padding: ( $spacer / 3 ) ( $spacer / 2 );
+		padding:  math.div($spacer, 3)  ( $spacer * 0.5 );
 	}
 }
 
