--- a/src/common/ui/supply-point/supply-point.component.scss
+++ b/src/common/ui/supply-point/supply-point.component.scss
@@ -5,6 +5,8 @@
  */
 
 // Core component import
+@use "sass:math";
+
 @import 'src/assets/scss/01_base/base.scss';
 
 // Component variables
@@ -93,7 +95,7 @@
 
 	&__inner {
 		height: 100%;
-		padding: ( $spacer * 1.5 ) $spacer ( $spacer / 2 );
+		padding: ( $spacer * 1.5 ) $spacer ( $spacer * 0.5 );
 
 		// Media queries
 		@include media-breakpoint-up(md) {
@@ -122,7 +124,7 @@
 
 	&__icon {
 		display: block;
-		padding-top: ( ( $supply-point-title-line-height-px - $supply-point-icon-font-size ) / 2 );
+		padding-top: ( ( $supply-point-title-line-height-px - $supply-point-icon-font-size ) * 0.5 );
 		color: $icons-primary;
 		font-size: $supply-point-icon-font-size;
 	}
@@ -162,7 +164,7 @@
 
 	&__value {
 		font-size: 1.125rem;
-		line-height: ( 26 / 18 );
+		line-height:  math.div(26, 18) ;
 
 		// Media queries
 		@include media-breakpoint-up(md) {
@@ -173,9 +175,9 @@
 
 	&__price-label {
 		display: flex;
-		padding-bottom: ( ( $supply-point-title-line-height-px - $supply-point-title-font-size ) / 2 );
-		margin-bottom: ( $spacer / 4 );
-		line-height: ( 18 / 14 );
+		padding-bottom: ( ( $supply-point-title-line-height-px - $supply-point-title-font-size ) * 0.5 );
+		margin-bottom: ( $spacer * 0.25 );
+		line-height:  math.div(18, 14) ;
 
 		// Media queries
 		@include media-breakpoint-up(xl) {
@@ -197,7 +199,7 @@
 	&__addon {
 		// Media queries
 		@include media-breakpoint-up(md) {
-			padding-top: ( ( $supply-point-title-line-height-px - $btn-height ) / 2 );
+			padding-top: ( ( $supply-point-title-line-height-px - $btn-height ) * 0.5 );
 			text-align: right;
 		}
 		@include media-breakpoint-up(xl) {
