--- a/src/common/ui/supply-points-summary/supply-points-summary.component.scss
+++ b/src/common/ui/supply-points-summary/supply-points-summary.component.scss
@@ -17,7 +17,7 @@
 	box-shadow: $box-shadow;
 
 	&__inner {
-		padding: ( $spacer * 1.5 ) $spacer ( $spacer / 2 );
+		padding: ( $spacer * 1.5 ) $spacer ( $spacer * 0.5 );
 
 		// Media queries
 		@include media-breakpoint-up(md) {
@@ -27,7 +27,7 @@
 
 	&__icon {
 		display: block;
-		padding-top: ( ( $supply-point-title-line-height-px - $supply-point-icon-font-size ) / 2 );
+		padding-top: ( ( $supply-point-title-line-height-px - $supply-point-icon-font-size ) * 0.5 );
 		color: $icons-primary;
 		font-size: $supply-point-icon-font-size;
 	}
@@ -48,7 +48,7 @@
 	}
 
 	&__value {
-		margin-bottom: ( $spacer / 2 );
+		margin-bottom: ( $spacer * 0.5 );
 		font-size: 3rem;
 	}
 
@@ -69,7 +69,7 @@
 	}
 
 	&__info-icon {
-		margin-bottom: ( $spacer / 2 );
+		margin-bottom: ( $spacer * 0.5 );
 		color: $icons-secondary;
 	}
 
