--- a/src/common/ui/tabs/graph-tabs.component.scss
+++ b/src/common/ui/tabs/graph-tabs.component.scss
@@ -5,6 +5,8 @@
  */
 
 // Core component import
+@use "sass:math";
+
 @import 'src/assets/scss/01_base/base.scss';
 
 // Component variables
@@ -24,7 +26,7 @@
 .tab-content {
 	position: relative;
 	width: 100%;
-	padding: ( $spacer / 2 );
+	padding: ( $spacer * 0.5 );
 	background-color: $white;
 
 	// Media queries
@@ -58,12 +60,12 @@
 		}
 
 		& + .tab-content {
-			padding-top: ( ( $spacer / 2 ) + ( $spacer / 3 ) );
+			padding-top: ( ( $spacer * 0.5 ) +  math.div($spacer, 3)  );
 
 			// Media queries
 			@include media-breakpoint-up(md) {
 				padding-top: $spacer;
-				padding-left: ( $spacer + ( $spacer / 3 ) );
+				padding-left: ( $spacer +  math.div($spacer, 3)  );
 			}
 		}
 	}
@@ -92,7 +94,7 @@
 	.nav-link {
 		position: relative;
 		height: 100%;
-		padding: ( $spacer / 3 ) ( $spacer / 2 );
+		padding:  math.div($spacer, 3)  ( $spacer * 0.5 );
 		background-color: $white;
 		color: $gray-500;
 		border: 1px solid $gray-200;
@@ -101,14 +103,14 @@
 
 		// Media queries
 		@include media-breakpoint-up(sm) {
-			padding: ( $spacer / 1.5 ) ( $spacer / 2 );
+			padding:  math.div($spacer, 1.5)  ( $spacer * 0.5 );
 		}
 		@include media-breakpoint-up(md) {
-			padding: $spacer ( $spacer / 1.5 );
+			padding: $spacer  math.div($spacer, 1.5) ;
 			text-align: left;
 		}
 		@include media-breakpoint-up(xl) {
-			padding: $spacer ( $spacer / 2 );
+			padding: $spacer ( $spacer * 0.5 );
 		}
 
 		@include link-without-href-interactive {
@@ -181,7 +183,7 @@
 
 	::ng-deep &__widget-holder {
 		height: 100%;
-		margin: 0 ( -$spacer / 2 ) ( -$spacer / 2 );
+		margin: 0 ( -$spacer * 0.5 ) ( -$spacer * 0.5 );
 	}
 }
 
@@ -202,18 +204,18 @@
 		}
 
 		& + .tab-content {
-			padding-top: ( ( $spacer / 2 ) + ( $spacer / 3 ) );
+			padding-top: ( ( $spacer * 0.5 ) +  math.div($spacer, 3)  );
 
 			// Media queries
 			@include media-breakpoint-up(md) {
 				width: auto;
-				padding-top: ( $spacer + ( $spacer / 3 ) );
+				padding-top: ( $spacer +  math.div($spacer, 3)  );
 				padding-left: $spacer;
 			}
 			@include media-breakpoint-up(xl) {
 				width: calc(100% - 300px);
 				padding-top: $spacer;
-				padding-left: ( $spacer + ( $spacer / 3 ) );
+				padding-left: ( $spacer +  math.div($spacer, 3)  );
 			}
 		}
 	}
@@ -260,7 +262,7 @@
 			margin: 0 ( -$spacer );
 		}
 		@include media-breakpoint-up(xl) {
-			margin-left: -( $spacer / .75 );
+			margin-left: -( math.div($spacer, .75) );
 		}
 	}
 }
@@ -269,7 +271,7 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-	padding: ( $spacer / 3 );
+	padding:  math.div($spacer, 3) ;
 	background-color: $blue-200;
 	color: $white;
 
@@ -288,7 +290,7 @@
 
 	// Media queries
 	@include media-breakpoint-up(md) {
-		margin-bottom: ( $spacer / 2 );
+		margin-bottom: ( $spacer * 0.5 );
 		font-size: .8125rem;
 		text-align: left;
 	}
@@ -303,7 +305,7 @@
 	// Media queries
 	@include media-breakpoint-up(md) {
 		display: block;
-		padding-right: ( $spacer / 3 );
+		padding-right:  math.div($spacer, 3) ;
 	}
 	@include media-breakpoint-up(lg) {
 		padding-right: ( $spacer * 2 );
